changed style css

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="column">
       <h4 class="column-title">{{ name }}</h4>
       <ul id="{{ id }}" class="column-card-list"></ul>
-      <button class="btn btn-delete">x</button>
-      <button class="btn btn-dark add-card">Add a card</button>
+      <button class="btn-delete">x</button>
+      <button class="btn add-card">Add a card</button>
     </div>
   </script>
     <script id="card-template" type="x-tmpl-mustache">
         <div class="card">
       <p class="card-description">{{ description }}</p>
-      <button class="btn btn-dark btn-delete">x</button>
+      <button class="btn  btn-delete card-delete">x</button>
     </div
   </script>
 
